syntax="proto3";

package grpc3;

option go_package="grpc3/calculator/proto";

// import "grpc3/calculator/sum.proto";

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse);
    rpc Primes(PrimesRequest) returns (stream PrimesResponse);
}

message SumRequest {
    int64 first_number = 1;
    int64 second_number = 2;
}

message PrimesRequest {
    int64 firstNumber = 1;
}

message SumResponse {
    int64 result = 1;
}
message PrimesResponse {
    int64 result = 1;
}

